# data-analyst-ai-agent

./: .gitignore  CHINOOK_GUIDE.md  DEMO_SCRIPT.md  README.md  TROUBLESHOOTING.md  demo_queries.md  start.bat
backend/: .env.example  .gitignore  ENV_CONFIG.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  database.py  debug.py  messages.py  sessions.py
backend/app/models/: __init__.py  requests.py  responses.py  session.py
backend/app/services/: __init__.py  agent.py  agent_direct.py  llm_client.py  session_manager.py  sql_tool.py
backend/app/utils/: __init__.py  dependencies.py
frontend/: index.html
