[project]
name = "data-analytics-agent"
version = "0.1.0"
description = "General Purpose Data Analytics Agent with SQL capabilities"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "sse-starlette>=1.6",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21"
]